# -bazel_unit_test_suite

./: bazel-bazel_unit_test_suite
app/hellotest/: BUILD.bazel
app/hellotest/src/main/java/com/hellotest/: GreeterService.java  HelloTestMain.java
app/hellotest/src/test/java/com/hellotest/: GreeterServiceTest.java  HelloTestMainTest.java
tools/rules/: junit4_test_suite.bzl
